# have-the-cats-been-fed

./: README.md  docker-compose.deploy.yaml  docker-compose.yaml  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/migrations/2024-02-11-ftw-add-log-table/: down.sql  up.sql
backend/src/: main.rs
frontend/: Dockerfile  README.md  app.vue  colours-to-scss.mjs  colours.json  nuxt.config.ts  package-lock.json  package.json
frontend/assets/styles/: button.scss  global.scss  input.scss
frontend/assets/styles/variables/: borders.scss  colours.scss
frontend/components/: BottomSheet.vue  DeviceIdForm.vue  FeedButton.vue  FeedingStatus.vue
frontend/composables/: deviceIdService.ts  feedingService.ts
frontend/pages/: index.vue
