[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
deadpool-diesel = { version = "0.4.1", features = ["sqlite"] }
diesel = { version = "2", features = ["sqlite", "time"] }
diesel_migrations = "2"
time = { version = "0.3", features = ["serde-human-readable"] }
